added many functions to the backend
