# doc/api.yaml
@@ -2,6 +2,9 @@ openapi: '3.0.2'
 info:
   title: API Title
   version: '1.0'
+
+servers:
+  - url: http://localhost:3000
   
 tags: 
   - name: login
@@ -28,10 +31,7 @@ paths:
         content:
           application/json:
             schema:
-              type: string
-              pattern: 'ˆ.*?$'
-              minLength: 3
-              maxLength: 16
+              $ref: '#/components/schemas/user/properties/username'
         required: true
       responses:
         '201':
@@ -67,7 +67,7 @@ paths:
         You can change your userame. It has to have a minimum of 3 letters and a maximum of 16
         you can change it as many times as you want.
       tags: [profile]
-      operationId: setMyUserName
+      operationId: SetMyUserName
       requestBody:
         content:
           application/json:
@@ -90,7 +90,7 @@ paths:
             appliccation/json:
               schema:
                 $ref: '#/components/schemas/error'
-  
+    
   /user/{userid}:
     parameters:
       - $ref: '#/components/parameters/users' 
@@ -115,6 +115,8 @@ paths:
               schema:
                 $ref: '#/components/schemas/error'
                 
+    
+  
   /user/{userid}/followers/:
     parameters:
       - $ref: '#/components/parameters/users'
@@ -123,7 +125,7 @@ paths:
       description: |
         You will follow this user and there posts will show up on your stream.
       tags: [userInteraction]
-      operationId: followUser
+      operationId: FollowUser
       responses:
         '201': 
           description: 'user successfully followed'
@@ -157,7 +159,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/error'
 
-  /user/{userid}/banedusers/:
+  /user/{userid}/ban/:
     parameters:
       - $ref: '#/components/parameters/users'
     post:
@@ -240,7 +242,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/user'
         '404':
-          description: post not found
+          description: photo not found
           content:
             appliccation/json:
               schema:
@@ -349,14 +351,14 @@ components:
       properties:
         username: 
           type: string
-          pattern: 'ˆ.*?$'
+          pattern: '^.*?$'
           minLength: 3
           maxLength: 16
           description: this is the public username everyone will be able to see
         id: 
-          type: string
+          type: integer
           pattern: '^u[0-9]+$'
-          example: u101
+          example: "u101"
           description: this is the unique identifier for users
 
     photo:
